# final_waste_segregation

./: .env  README.md  main.py  pyproject.toml  setup_database.py  update_schema.py  waste_management.db
.streamlit/: config.toml
assets/: styles.css
auth/: auth_handler.py  reset_password.py
models/: database.py
pages/: admin.py  auth.py  profile.py
utils/: data_generator.py  ml_predictor.py  visualizations.py
